# fusion-launcher

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml  Dioxus.toml  build.rs
app/assets/styles/: app.css  global.css
app/assets/styles/component/common/: button.css
app/assets/styles/page/: layout.css
app/src/: app.rs  error.rs  main.rs
app/src/model/config/: mod.rs  persistence.rs
app/src/model/game/: mod.rs  persistence.rs
app/src/ui/: app.rs  layout.rs  mod.rs  route.rs  style.rs
app/src/ui/component/common/: button.rs  mod.rs  radio_button.rs
app/src/ui/component/common/style/: radio_button.css
app/src/ui/localization/: mod.rs
app/src/ui/localization/messages/: en.json  fr.json
app/src/ui/page/: game_lib.rs  home.rs  layout.rs  mod.rs  plugin.rs
app/src/ui/style/: app.css
app/src/utils/: dir.rs  json.rs  mod.rs
