[package]
name = "fusion-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["desktop", "router"] }
dioxus-sdk = {version = "0.5", features = ["i18n"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
directories = "5.0"
uuid = {version = "1.10", features = ["v4"]}
